Resolves issue #12 (get sync tools link seems out of place) in release 2.4 issues list: https://wiki.duraspace.org/display/DSPINT/Release+2.4+Tasks
git-svn-id: https://svn.duraspace.org/duracloud/trunk@1173 1005ed41-97cd-4a8f-848c-be5b5fe45bcb

--- a/duradmin/src/main/webapp/style/buttons.css
+++ b/duradmin/src/main/webapp/style/buttons.css
@@ -279,6 +279,7 @@ span.off i,
 .arw-down-blue { background:url(../images/icon_sm_arw_blue.gif) no-repeat top right; }
 .arw-down-liteblue { background-image:url(../images/icon_sm_arw_cyan.gif); }
 .arw-down-green { background:url(../images/icon_sm_arw_green.gif) no-repeat top right; }
+.outer .gettools { background-image:url(../images/icon_sm_down_blue.gif); }
 .outer .help { background-image:url(../images/icon_sm_help_blue.gif); }
 .outer .logoff { background-image:url(../images/icon_sm_logoff_blue.gif); }
 .data-table { background-image:url(../images/icon_sm_table.png); }
@@ -302,17 +303,5 @@ button#recount {
 .icon-link
 {
 	margin-left:10px;
-}
-
-#gettools {
-  border-radius: 5px;
-  background-color: #5b5;
-  padding: 5px;
-  font-weight: bold;
-}
-
-#gettools a {
-  color: #fff;
-  text-decoration:none;
 }
 
